[gd_scene load_steps=4 format=3 uid="uid://du63p25gpg7t7"]

[ext_resource type="Script" uid="uid://don13l3e8x4cb" path="res://src/obstacles/instances/standing_short_obstacle.gd" id="1_c7a8w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fn00u"]
radius = 12.0
height = 94.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqg0v"]
size = Vector2(1152, 576)

[node name="StandingShortObstacle" type="Node2D"]
position = Vector2(0, 115)
script = ExtResource("1_c7a8w")

[node name="DetectPlayerCollision" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayerCollision"]
unique_name_in_owner = true
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_fn00u")

[node name="DetectPlayerProximity" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="ProximityShape" type="CollisionShape2D" parent="DetectPlayerProximity"]
unique_name_in_owner = true
rotation = 1.5708
shape = SubResource("RectangleShape2D_tqg0v")

[connection signal="body_entered" from="DetectPlayerCollision" to="." method="_on_detect_player_collision_body_entered"]
[connection signal="body_entered" from="DetectPlayerProximity" to="." method="_on_detect_player_proximity_body_entered"]
